example-service.yaml
apiVersion: example/v1alpha1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: hello-node
