example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.sendo.vn
      http:
        paths:
          - path: /
            backend:
              serviceName: example-service
              servicePort: 8080
